# inkless

./: .gitignore  CLAUDE.md  HARDWARE.md  LICENSE  README.md
.claude/: settings.local.json
cli/: pyproject.toml
cli/src/receipt_printer/: client.py  formatting.py  imaging.py  main.py
firmware/: platformio.ini
firmware/include/: secrets.h.example
firmware/src/: config.h  escpos.cpp  escpos.h  logo_data.h  main.cpp  routes.cpp  routes.h  web_ui.h
inkless-server/: .env.example  pyproject.toml  server.py
